other-vpol/limit-hostpath-type-pv/.chainsaw-test/pv-bad.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: bad-pv01
  labels:
    type: local
spec:
  storageClassName: manual
  capacity:
    storage: 5Gi
  accessModes:
    - ReadWriteOnce
  persistentVolumeReclaimPolicy: Retain
  hostPath:
    path: "/etc"
---
apiVersion: v1
kind: PersistentVolume
metadata:
  name: bad-pv02
  labels:
    type: local
spec:
  storageClassName: manual
  capacity:
    storage: 5Gi
  accessModes:
    - ReadWriteOnce
  persistentVolumeReclaimPolicy: Retain
  hostPath:
    path: "/etc/data/home"
---
apiVersion: v1
kind: PersistentVolume
metadata:
  name: bad-pv03
  labels:
    type: local
spec:
  storageClassName: manual
  capacity:
    storage: 5Gi
  accessModes:
    - ReadWriteOnce
  persistentVolumeReclaimPolicy: Retain
  hostPath:
    path: "/data-other"
