other-vpol/limit-hostpath-type-pv/.chainsaw-test/pv-good.yaml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: good-pv01
  labels:
    type: local
spec:
  storageClassName: manual
  capacity:
    storage: 5Gi
  accessModes:
    - ReadWriteOnce
  persistentVolumeReclaimPolicy: Retain
  hostPath:
    path: "/data"
---
apiVersion: v1
kind: PersistentVolume
metadata:
  name: good-pv02
  labels:
    type: local
spec:
  storageClassName: manual
  capacity:
    storage: 5Gi
  accessModes:
    - ReadWriteOnce
  persistentVolumeReclaimPolicy: Retain
  hostPath:
    path: "/data/home"
