other-vpol/limit-hostpath-type-pv/limit-hostpath-type-pv.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: limit-hostpath-type-pv
  annotations:
    policies.kyverno.io/title: Limit hostPath PersistentVolumes to Specific Directories in ValidatingPolicy
    policies.kyverno.io/category: Other in Vpol 
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: PersistentVolume
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kubernetes-version: "1.30"
    policies.kyverno.io/description: >-
      hostPath persistentvolumes consume the underlying node's file system. If hostPath volumes
      are not to be universally disabled, they should be restricted to only certain
      host paths so as not to allow access to sensitive information. This policy ensures
      the only directory that can be mounted as a hostPath volume is /data.
spec:
  evaluation:
    background:
      enabled: false
  validationActions: 
    - Audit
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE", "UPDATE"]
        resources: ["persistentvolumes"]
  validations:
    - expression: "!has(object.spec.hostPath) || object.spec.hostPath.path.startsWith('/data')"
      message: hostPath type persistent volumes are confined to /data.
