other-vpol/limit-hostpath-type-pv/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: limit-hostpath-type-pv
spec:
  # disable templating because it can cause issues with ValidatingPolicy
  template: false
  steps:
  - name: step-01
    try:
    - apply:
        file: ../limit-hostpath-type-pv.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1
          kind: ValidatingPolicy
          metadata:
            name: limit-hostpath-type-pv
          spec:
            validationActions:
             - Deny
    - assert:
        file: policy-ready.yaml
    - sleep: 
       duration: 10s
  - name: step-02
    try:
    - apply:
        file: pv-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: pv-bad.yaml
